<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/credits_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/home_credits"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/button_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/purplr_btn"
        style="@style/ButtonText"
        android:text="@string/button_texts" />

    <Button
        android:id="@+id/button_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/purplr_btn"
        style="@style/ButtonText"
        android:layout_below="@+id/button_texts"
        android:text="@string/button_cards" />

    <Button
        android:id="@+id/button_about_valentine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_cards"
        android:background="@drawable/purplr_btn"
        style="@style/ButtonText"
        android:text="@string/button_about_valentine" />

    <Button
        android:id="@+id/button_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/purplr_btn"
        style="@style/ButtonText"
        android:layout_below="@+id/button_about_valentine"
        android:text="@string/button_about_us" />

    <TextView
        android:id="@+id/home_lable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_texts"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical"
        android:text="@string/summary_here"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
